<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top|left"
    tools:context=".fragmets.ModificarMto">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="187dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="201dp"
        android:layout_marginBottom="85dp"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="631dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView171"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/modificarMTO"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/secondary_text_light"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="127dp"
        android:layout_height="362dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="222dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView172"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/id_auto" />

        <TextView
            android:id="@+id/textView173"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/ID_diagnostico" />

        <TextView
            android:id="@+id/textView174"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/ID_tipo_mto" />

        <TextView
            android:id="@+id/textView175"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/id_sucursal" />

        <TextView
            android:id="@+id/textView176"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/id_empleado" />

        <TextView
            android:id="@+id/textView177"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/fecha_mto" />

        <TextView
            android:id="@+id/textView178"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/proximo_mto" />

        <TextView
            android:id="@+id/textView179"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/estado_mto" />

        <TextView
            android:id="@+id/textView180"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/desc_mto" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="187dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="201dp"
        android:layout_marginBottom="85dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button35"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/boton_modificar"
            app:iconTint="@color/rojo" />


    </LinearLayout>

    <Button
        android:id="@+id/button36"
        android:layout_width="160dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/boton_cancelar"
        app:iconTint="@color/rojo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="362dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="22dp"

        android:layout_marginBottom="222dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextPersonName44"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName45"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName46"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName47"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName48"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName49"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextTextPersonName50"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextTextPersonName51"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName52"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center|top|left"
            android:inputType="textPersonName" />

    </LinearLayout>

</RelativeLayout>