<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="91dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/menu_principal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/secondary_text_light"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/btnMantenimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/menu_mantenimiento" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/btnAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/menu_auto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="252dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/menu_usuario" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/menu_cliente" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnFalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/menu_falla" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btnFacturacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/menu_factura" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>